ex1.7_logoutput/manifests/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: ex2-svc
# spec:
#   type: NodePort
#   selector:
#     app: ex2 # This is the app as declared in the deployment.
#   ports:
#     - name: http
#       nodePort: 30080 # This is the port that is available outside. Value for nodePort can be between 30000-32767
#       protocol: TCP
#       port: 1234 # This is a port that is available to the cluster, in this case it can be ~ anything
#       targetPort: 5000 # This is the target port

apiVersion: v1
kind: Service
metadata:
  name: ex7-svc
spec:
  type: ClusterIP
  selector:
    app: ex7
  ports:
    - port: 2345  # ???
      protocol: TCP
      targetPort: 4000
